--- a/Foundation/pom.xml
+++ b/Foundation/pom.xml
@@ -3,4 +3,15 @@
   <groupId>br.com.eblade.poc</groupId>
   <artifactId>Foundation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+	<dependencies>
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		    <version>4.0.1.RELEASE</version>
+		</dependency>
+			
+	</dependencies>
+
 </project>
